force-app/main/default/objects/FLM_Model__c/FLM_Model__c.object-meta.xml
<CustomObject>
    <label>FLM Model</label>
    <nameField>
        <label>FLM Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLM Models</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>