force-app/main/default/objects/FLM_Model__c/fields/Brinell_Hardness__c.field-meta.xml
<CustomField>
    <fullName>Brinell_Hardness__c</fullName>
    <label>Brinell Hardness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>