force-app/main/default/objects/FLM_Model__c/fields/Magnetic_Particle__c.field-meta.xml
<CustomField>
    <fullName>Magnetic_Particle__c</fullName>
    <label>Magnetic Particle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>