force-app/main/default/objects/FLM_Model__c/fields/Visual_Casting__c.field-meta.xml
<CustomField>
    <fullName>Visual_Casting__c</fullName>
    <label>Visual Casting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>