force-app/main/default/objects/FLM_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASYTYP__c</columns>
    <columns>Base_Model__c</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Description__c</columns>
    <columns>Brinell_Hardness__c</columns>
    <columns>Dye_Penetrant__c</columns>
    <columns>ENGCAT__c</columns>
    <columns>Fillet_Weld_LP__c</columns>
    <columns>Magnetic_Particle__c</columns>
    <columns>OA01A__c</columns>
    <columns>OA02__c</columns>
    <columns>OA03__c</columns>
    <columns>OA06__c</columns>
    <columns>PictureOfPortOpts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>